--- a/src/App.css
+++ b/src/App.css
@@ -19,9 +19,41 @@
     cursor: pointer;
 }
 
-#player-container{
-    width: 100vw;
-    height: 100vh;
+.player-container{
+    display: flex;
+    align-items: center;
+    width: 50vw;
+    height: 50vh;
     border: 3px solid #fff;
 }
 
+.forward-backward {
+    flex: 1;
+    height: 20px;
+    display: flex;
+    background: none;
+    border: none;
+    align-items: center;
+    font-family: monospace;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.forward-backward:hover {
+    color: white;
+}
+
+/* play/pause button */
+.play-pause {
+    border: none;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.25);
+    height: 75px;
+    width: 75px;
+    font-size: 32px;
+}
+
+.current-time,
+.duration {
+    
+}
