added styling to progress bar and progress bar thumb

--- a/src/App.css
+++ b/src/App.css
@@ -60,5 +60,110 @@
 
 .current-time,
 .duration {
-
+    font-family: monospace;
+    font-size: 16px;
 }
+
+.progress-bar {
+    --bar-bg: #ffe3d4;
+    --seek-before-width: 100px;
+    --seek-before-color: #ffc2a1;
+    --knobby: #3452a5;
+    --selected-knobby: #26c9c3;
+
+    appearance: none;
+    background: var(--bar-bg);
+    border-radius: 10px;
+    position: relative;
+    width: 100%;
+    height: 11px;
+    outline: none;
+}
+
+/* progress bar - safari */
+.progress-bar::-webkit-slider-runnable-track{
+    background: var(--bar-bg);
+    border-radius: 10px;
+    position: relative;
+    width: 100%;
+    height: 11px;
+    outline: none;
+}
+
+/* progress bar - firefox */
+.progress-bar::-moz-range-track{
+    background: var(--bar-bg);
+    border-radius: 10px;
+    position: relative;
+    width: 100%;
+    height: 11px;
+    outline: none;
+}
+
+.progress-bar::-moz-focus-outer{
+    border: 0;
+}
+
+/* progress bar - chrome & safari */
+.progress-bar::before {
+    content: '';
+    height: 11px;
+    width: var(--seek-before-width);
+    background-color: var(--seek-before-color);
+    border-top-left-radius: 10%;
+    border-bottom-left-radius: 10%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    cursor: pointer;
+}
+
+/* progress bar - firefox */
+.progress-bar::-moz-range-progress {
+    background-color: var(--seek-before-color);
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    height: 11px;
+}
+
+/* progress bar - chrome & safari */
+.progress-bar::-webkit-slider-thumb{
+    -webkit-appearance: none;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    border: none;
+    background-color: var(--knobby);
+    cursor: pointer;
+    position: relative;
+    margin: -2px 0 0 0;
+    z-index: 3;
+    box-sizing: border-box;
+}
+
+/* knobby while dragging - chrome & safari */
+.progress-bar:active::-webkit-slider-thumb{
+    transform: scale(1.2);
+    background: var(--selected-knobby);
+}
+
+/* knobby - firefox */
+.progress-bar::-moz-range-thumb {
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    border: transparent;
+    background-color: var(--knobby);
+    cursor: pointer;
+    position: relative;
+    z-index: 3;
+    box-sizing: border-box;
+}
+
+/* knobby while dragging - firefox */
+.progress-bar:active::-moz-range-thumb {
+    transform: scale(1.2);
+    background: var(--selected-knobby);
+}
+
